kubernetes/base/thingsboard-service.yaml
# kubernetes/base/thingsboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thingsboard-service
spec:
  selector:
    app: thingsboard
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  - name: mqtt
    protocol: TCP
    port: 1883
    targetPort: 1883
  type: ClusterIP
