kubernetes/base/thingsboard-ui-service.yaml
# kubernetes/base/thingsboard-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thingsboard-ui-service
spec:
  selector:
    app: thingsboard-ui # This selector matches the labels on the pods created by the deployment above
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
